@@ -2,6 +2,11 @@
 
 	* nfs.h: Add #include <sys/mman.h> for munmap decl.
 
+1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* ops.c (netfs_get_dirents): Use mmap instead of vm_allocate.
+	* pager.c (pager_read_page): Likewise.
+
 1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>
 
 	* ops.c (netfs_get_dirents): Use munmap instead of vm_deallocate.
